--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "eleventy --serve",
+    "build": "eleventy",
+    "tailwind": " tailwindcss -i ./tailwind.css -o ./_site/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
