--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "eleventy --serve",
     "build": "eleventy",
-    "tailwind": " tailwindcss -i ./tailwind.css -o ./_site/css/styles.css --watch"
+    "tailwind": " tailwindcss -i ./tailwind.css -o ./public/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
