--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "eleventy --serve",
     "build": "eleventy",
-    "tailwind": " tailwindcss -i ./tailwind.css -o ./public/css/styles.css --watch"
+    "tailwind": " tailwindcss -i ./tailwind.css -o ./src/assets/css/styles.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "github:11ty/eleventy",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "tailwindcss": "^3.1.4"
   }
 }
